@@ -22,7 +22,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class RequestUtil {
 
@@ -31,16 +30,16 @@ public class RequestUtil {
    *
    * @param <T> The type of the request to filter by, extending Request.
    * @param requests The list of requests to filter.
-   * @param type The class of the request type to filter for.
+   * @param requestType The class of the request type to filter for.
    * @return A List containing only requests of the specified type, or an empty list if the input
    *     list is null or contains no requests of the specified type.
    */
   public static <T extends Request> List<T> filterRequestsOfType(
-      final List<Request> requests, final Class<T> type) {
+      final List<Request> requests, final Class<T> requestType) {
     if (requests == null) {
       return Collections.emptyList();
     }
-    return requests.stream().filter(type::isInstance).map(type::cast).collect(Collectors.toList());
+    return requests.stream().filter(requestType::isInstance).map(requestType::cast).toList();
   }
 
   public static Optional<List<Deposit>> getDepositRequests(final Optional<List<Request>> requests) {
